[package]
name = "dboard-simulator"
version = "0.1.0"
authors = ["Devyn Cairns <devyn.cairns@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = "0.32"
error-chain = "0.12"
serde_json = "1.0"
reqwest = "0.9"

[dependencies.image]
version = "0.21"
default-features = false
features = ["bmp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
